--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,4 +1,4 @@
 eureka:
   client:
     service-url:
-      defaultZone:  http://localhost:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka
