--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,6 +1,2 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka7001.com:7001/eureka
-confiTest:
+confitest:
   test:123456789
